[package]
authors = ["Jack Taylor <j@jackt.io>"]
description = "Upload and reference Roblox assets in code"
edition = "2024"
homepage = "https://github.com/jacktabscode/asphalt"
license = "MIT"
name = "asphalt"
readme = "README.md"
repository = "https://github.com/jacktabscode/asphalt"
version = "2.0.0"

[dependencies]
anyhow = "1.0.98"
bit-vec = "0.8"
blake3 = "1.8.2"
bytes = "1.10.1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5.41", features = ["derive"] }
clap-verbosity-flag = "3.0.3"
clap_complete = "4.5"
dashmap = "6.1.0"
dotenvy = "0.15.7"
env_logger = "0.11.8"
fjson = "0.3.1"
fs-err = { version = "3.1.1", features = ["tokio"] }
futures = "0.3.31"
globset = { version = "0.4.16", features = ["serde1"] }
image = "0.25.6"
indicatif = "=0.17.11"
indicatif-log-bridge = "0.2.3"
json5 = "0.4.1"
log = "0.4.27"
miette = { version = "7.0", features = ["fancy"] }
num_cpus = "1.16"
owo-colors = "4.0"
oxipng = { version = "9.1", default-features = false, features = ["parallel", "zopfli"] }
rbx_binary = { version = "1.0.0", features = ["serde"] }
rbx_cookie = { version = "0.1.5", default-features = false }
rbx_xml = "1.0.0"
regex = "1.12.2"
reqwest = { version = "0.12.22", default-features = false, features = ["rustls-tls", "gzip", "multipart"] }
resvg = "0.45.1"
roblox_install = "1.0.0"
schemars = { version = "1.0", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.46.1", features = ["full"] }
toml = "0.9.2"
walkdir = "2.5.0"

[features]
mock_cloud = []

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[dev-dependencies]
assert_cmd = "2.0"
insta = { version = "1.43.1", features = ["yaml"] }
predicates = "3.0"
tempfile = "3.8"

[profile.dev.package]
insta.opt-level = 3
