[package]
authors = ["Jack Taylor <j@jackt.io>"]
description = "Upload and reference Roblox assets in code"
edition = "2024"
homepage = "https://github.com/jacktabscode/asphalt"
license = "MIT"
name = "asphalt"
readme = "README.md"
repository = "https://github.com/jacktabscode/asphalt"
version = "1.4.0"

[dependencies]
anyhow = "1.0.100"
bit-vec = "0.8"
blake3 = "1.8.2"
bytes = "1.10.1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5.50", features = ["derive"] }
clap-verbosity-flag = "3.0.4"
clap_complete = "4.5"
dashmap = "6.1.0"
dotenvy = "0.15.7"
env_logger = "0.11.8"
fjson = "0.3.1"
fs-err = { version = "3.1.3", features = ["tokio"] }
futures = "0.3.31"
globset = { version = "0.4.18", features = ["serde1"] }
image = "0.25.8"
indicatif = "0.18.1"
indicatif-log-bridge = "0.2.3"
json5 = "0.4.1"
log = "0.4.28"
miette = { version = "7.0", features = ["fancy"] }
num_cpus = "1.16"
owo-colors = "4.0"
oxipng = { version = "9.1", default-features = false, features = ["parallel", "zopfli"] }
rbx_binary = { version = "2.0.0", features = ["serde"] }
rbx_xml = "2.0.0"
relative-path = { version = "2.0.1", features = ["serde"] }
reqwest = { version = "0.12.24", default-features = false, features = ["gzip", "multipart", "rustls-tls"] }
resvg = "0.45.1"
roblox_install = "1.0.0"
schemars = { version = "1.0.4", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
toml = "0.9.8"
walkdir = "2.5.0"

[dev-dependencies]
insta = { version = "1.43.2", features = ["yaml"] }

[features]
mock_cloud = []

[profile.dev.package]
insta.opt-level = 3

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
